link for more info

--- a/part1/timer.html
+++ b/part1/timer.html
@@ -19,7 +19,7 @@
     <div id="app"></div>
     <script type="text/babel">
         
-        let INTERVAL_ID;
+        let INTERVAL_ID; //https://stackoverflow.com/questions/47254124/clear-interval-in-react-class
 
         class Timer extends React.Component {
             constructor(props) {
