--- a/part2/index.html
+++ b/part2/index.html
@@ -6,41 +6,85 @@
     <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
     <!-- responsible for updating DOM -->
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
+    <link href='https://fonts.googleapis.com/css?family=Nova Flat' rel='stylesheet'>
     <!-- translate and compiles jsx to javascript -->
     <script src="https://unpkg.com/babel-standalone@6.26.0/babel.js"></script>
     <style>
         .result {
-            height: 60px;
-            background-color: #bbb;
-            width: 100%;
+            width: 92%;
+            font-size: 5rem;
+            height: 80px;
+            border: none;
+            background-color: #252525;
+            color: #fff;
+            text-align: right;
+            padding-right: 20px;
+            padding-left: 10px;
         }
 
-        .result p {
+        p {
+            font-family: 'Nova Flat';
             font-size: 40px;
             margin: 5px;
 
         }
 
         .calculator-body {
-            max-width: 400px;
-            margin: auto;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            width: 400px;
         }
 
-        .button {
-            display: block;
-            background-color: #bbb;
+        button:hover {
+            background-color: #eaeaea;
+        }
+
+        .operator {
+            color: #337cac;
+        }
+
+        .all-clear {
+            background-color: #f0595f;
+            border-color: #b0353a;
+            color: #fff;
+        }
+
+        .all-clear:hover {
+            background-color: #f17377;
+        }
+
+        .equal-sign {
+            background-color: #2e86c0;
+            border-color: #337cac;
+            color: #fff;
+        }
+
+        .equal-sign:hover {
+            background-color: #4e9ed4;
+        }
+
+        .calculator-keys {
+            display: grid;
+            grid-template-columns: repeat(4, 1fr);
+            grid-gap: 20px;
+            padding: 20px;
         }
 
         button {
-            width: 25%;
             height: 60px;
-            font-size: 30px;
-        }
-
-        body {
-            margin: 0;
-            padding: 0;
-            font-family: sans-serif;
+            background-color: #fff;
+            border-radius: 3px;
+            border: 1px solid #c4c4c4;
+            background-color: transparent;
+            font-size: 2rem;
+            color: #333;
+            background-image: linear-gradient(to bottom, transparent, transparent 50%, rgba(0, 0, 0, .04));
+            box-shadow: inset 0 0 0 1px rgba(255, 255, 255, .05), inset 0 1px 0 0 rgba(255, 255, 255, .45), inset 0 -1px 0 0 rgba(255, 255, 255, .15), 0 1px 0 0 rgba(255, 255, 255, .15);
+            text-shadow: 0 1px rgba(255, 255, 255, .4);
         }
     </style>
 
@@ -55,7 +99,7 @@
 
         class Result extends React.Component {
             render() {
-            
+
                 return (
                     <div className="result">
                         <p>{this.props.result}</p>
@@ -69,31 +113,31 @@
 
             render() {
                 return (
-                    <div className="button">
+                    <div className="calculator-keys">
                         <button name="(" onClick={e => { this.props.onClick(e.target.name) }}>(</button>
                         <button name=")" onClick={e => { this.props.onClick(e.target.name) }}>)</button>
                         <button name="CE" onClick={e => { this.props.onClick(e.target.name) }}>CE</button>
-                        <button name="C" onClick={e => { this.props.onClick(e.target.name) }}>C</button><br />
+                        <button name="C" class="all-clear" onClick={e => { this.props.onClick(e.target.name) }}>C</button>
 
                         <button name="1" onClick={e => { this.props.onClick(e.target.name) }}>1</button>
                         <button name="2" onClick={e => { this.props.onClick(e.target.name) }}>2</button>
                         <button name="3" onClick={e => { this.props.onClick(e.target.name) }}>3</button>
-                        <button name="+" onClick={e => { this.props.onClick(e.target.name) }}>+</button><br />
+                        <button name="+" className="operator" onClick={e => { this.props.onClick(e.target.name) }}>+</button>
 
                         <button name="4" onClick={e => { this.props.onClick(e.target.name) }}>4</button>
                         <button name="5" onClick={e => { this.props.onClick(e.target.name) }}>5</button>
                         <button name="6" onClick={e => { this.props.onClick(e.target.name) }}>3</button>
-                        <button name="-" onClick={e => { this.props.onClick(e.target.name) }}>-</button><br />
+                        <button name="-" className="operator" onClick={e => { this.props.onClick(e.target.name) }}>-</button>
 
                         <button name="7" onClick={e => { this.props.onClick(e.target.name) }}>7</button>
                         <button name="8" onClick={e => { this.props.onClick(e.target.name) }}>8</button>
                         <button name="9" onClick={e => { this.props.onClick(e.target.name) }}>9</button>
-                        <button name="*" onClick={e => { this.props.onClick(e.target.name) }}>*</button><br />
+                        <button name="*" className="operator" onClick={e => { this.props.onClick(e.target.name) }}>*</button>
 
-                        <button name="." onClick={e => { this.props.onClick(e.target.name) }}>.</button>
+                        <button name="." className="decimal" onClick={e => { this.props.onClick(e.target.name) }}>.</button>
                         <button name="0" onClick={e => { this.props.onClick(e.target.name) }}>0</button>
-                        <button name="=" onClick={e => { this.props.onClick(e.target.name) }}>=</button>
-                        <button name="/" onClick={e => { this.props.onClick(e.target.name) }}>/</button><br />
+                        <button name="=" className="equal-sign" onClick={e => { this.props.onClick(e.target.name) }}>=</button>
+                        <button name="/" className="operator" onClick={e => { this.props.onClick(e.target.name) }}>/</button>
                     </div>
 
                 )
